mywork/force-app/main/default/objects/Feedback_API_Mapping__c/Feedback_API_Mapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Stores field mapping from for
Feedback API.  Mapping is from source field name to target field name.</description>
    <label>Feedback API Mapping</label>
</CustomObject>