mywork/force-app/main/default/objects/Feedback_API_Mapping__c/fields/Comparison_Value__c.field-meta.xml
<CustomField>
    <fullName>Comparison_Value__c</fullName>
    <description>Comparison value to match operator against</description>
    <inlineHelpText>Comparison value to match operator against (Only populate if this is a complex mapping)</inlineHelpText>
    <label>Comparison Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>