mywork/force-app/main/default/objects/Feedback_API_Mapping__c/fields/Is_Complex__c.field-meta.xml
<CustomField>
    <fullName>Is_Complex__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to indicate that the mapping is not a 1:1 mapping from a field in the source object to a field in the target object</description>
    <inlineHelpText>Used to indicate that the mapping is not a 1:1 mapping from a field in the source object to a field in the target object</inlineHelpText>
    <label>Is Complex?</label>
    <type>Checkbox</type>
</CustomField>