mywork/force-app/main/default/objects/Feedback_API_Mapping__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <description>Only 'equals' is currently supported. If blank, the target value will always be applied</description>
    <inlineHelpText>Only 'equals' is currently supported. If blank, the target value will always be applied (Only populate if this is a complex mapping)</inlineHelpText>
    <label>Operator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>