mywork/force-app/main/default/objects/Feedback_API_Mapping__c/fields/Target_Field__c.field-meta.xml
<CustomField>
    <fullName>Target_Field__c</fullName>
    <inlineHelpText>Stores the API name of the field in the target SObject. The SObject type is stored in Feedback API Settings</inlineHelpText>
    <label>Target Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>