mywork/force-app/main/default/objects/Feedback_API_Mapping__c/fields/Target_Value__c.field-meta.xml
<CustomField>
    <fullName>Target_Value__c</fullName>
    <description>Value to populate target field with if comparison evaluates to true - This can be in the form of a merge field on the source object e.g. {!SourceFieldName}. Otherwise, the value will be copied as is.</description>
    <inlineHelpText>Value to populate target field with if comparison evaluates to true - This can be in the form of a merge field on the source object e.g. {!SourceFieldName}. Otherwise, the value will be copied as is. (only necessary if this is a complex mapping)</inlineHelpText>
    <label>Target Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>